# tech-europe-secure

./: .gitignore  AIKIDO_DETECTION_CHECKLIST.md  AIRGAP_RUN.md  Dockerfile.vuln-lab  README.md  README_VULN_LAB.md  SECURITY.md  VULNERABILITY_SUMMARY.md  VULN_CHECKLIST.md  k8s-vulnerable.yaml  terraform-vulnerable.tf  vuln_manifest.json
agent/: README.md  pyproject.toml  requirements-vulnerable.txt  requirements.txt
agent/docs/: API.md  DEPLOYMENT.md
agent/drive_thru/: agent.py  api.py  conversation_analyzer.py  data_pipeline.py  data_validator.py  database.py  database_config.py  insecure_config.py  models.py  order.py  vulnerable_advanced_deserialization.py  vulnerable_advanced_path_traversal.py  vulnerable_advanced_rce.py  vulnerable_advanced_sql.py  vulnerable_auth.py  vulnerable_auth_bypass.py  vulnerable_authz_bypass.py  vulnerable_buffer_overflow.py  vulnerable_business_logic.py  vulnerable_clickjacking.py  vulnerable_command_injection.py  vulnerable_config.py  vulnerable_crlf_injection.py  vulnerable_crypto.py  vulnerable_csrf.py  vulnerable_database.py  vulnerable_dom_xss.py  vulnerable_email.py  vulnerable_file_upload.py  vulnerable_format_string.py  vulnerable_header_injection.py  vulnerable_http_parameter_pollution.py  vulnerable_info_disclosure.py  vulnerable_integer_overflow.py  vulnerable_ldap_injection.py  vulnerable_log_injection.py  vulnerable_logging.py  vulnerable_memory_corruption.py  vulnerable_network.py  vulnerable_nosql_injection.py  (+14 more)
agent/scripts/: clear_database.py  init_database.py  inspect_database.py  run_agent.py  run_api.py
(+52 files in other folders)
